--- a/css/horasRestantesU.css
+++ b/css/horasRestantesU.css
@@ -92,3 +92,11 @@ input#lookIt{
     border-radius: 3px;
     width:90%;
 }
+/* Making tooltips wider */
+.tooltip-inner {
+    max-width: 100% !important;
+}
+/* Aligning <li> inside wrapper to the left */
+li{
+    text-align:left;
+} 
