--- a/css/register_app.css
+++ b/css/register_app.css
@@ -188,7 +188,7 @@ input#lookIt{
     cursor:pointer; 
     width:100%;
 }
-#register{
+#vehiculos{
     /**text-indent: 14px;
     /** Cause 'selected' **/
     background-color: #DDF0EC;
