--- a/css/vehiculos.css
+++ b/css/vehiculos.css
@@ -43,7 +43,7 @@ input#lookIt{
     cursor:pointer; 
     width:100%;
 }
-#vehiculo{
+#mantenimientos{
     /**text-indent: 14px;
     /** Cause 'selected' **/
     background-color: #DDF0EC;
